# ax_asr_api

./: .build-state.json  .gitignore  CMakeLists.txt  README.md  build_ax620q.sh  build_ax630c.sh  build_ax650.sh  build_ax8850_aarch64.sh  download_bsp.sh  main.cpp
.github/workflows/: build_whl.yml
cmake/: msp_dependencies.cmake
cpp/: CMakeLists.txt
cpp/cmake/: detect_neon.cmake  msp_dependencies.cmake
cpp/server/: CMakeLists.txt  asr_server.cpp  asr_server.hpp  main.cpp  openai_err.hpp
cpp/src/api/: ax_asr_api.cpp  ax_asr_api.h
cpp/src/asr/: asr_interface.hpp  sensevoice.cpp  sensevoice.hpp  whisper.hpp
cpp/src/ax_model_runner/: ax_engine_guard.cpp  ax_engine_guard.hpp  ax_engine_impl.hpp  ax_model_runner.cpp  axcl_engine_guard.cpp
cpp/src/utils/: AudioFile.h  AudioLoader.cpp  base64.h  logger.h
cpp/tests/: CMakeLists.txt
docs/: openapi.yaml
python/: .gitignore  CMakeLists.txt  build_whl.sh  pyproject.toml  setup.py
python/src/ax_asr/: __init__.py  _binding.cpp  recognizer.py
python/test/: test_recognizer.py
scripts/: load_cmvn.py  test_asr_server.py
server/: CMakeLists.txt  asr_server.cpp  asr_server.hpp  main.cpp  openai_err.hpp
src/api/: ax_asr_api.cpp  ax_asr_api.h
src/asr/: asr_factory.hpp  asr_interface.hpp  sensevoice.cpp  sensevoice.hpp  whisper.cpp  whisper.hpp
src/ax_model_runner/: ax_engine_impl.hpp  ax_model_runner.cpp  ax_model_runner.hpp  axcl_engine_guard.hpp  axcl_engine_impl.hpp
src/utils/: AudioLoader.cpp  AudioLoader.hpp  logger.h  memory_utils.cpp  memory_utils.hpp  resample.cpp
storage/workflows/refactor-20260707-113612/: baseline.json  execution_queue.json  opportunities.json
storage/workflows/refactor-20260707-113612/rounds/: round1.json  round2.json
tests/: CMakeLists.txt  test_sensevoice.cpp  test_whisper_base.cpp  test_whisper_small.cpp  test_whisper_tiny.cpp  test_whisper_turbo.cpp
