[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ax_asr"
version = "0.1.0"
description = "Python binding for Axera ASR speech recognition library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Axera Semiconductor" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
cmake.version = ">=3.13"
cmake.args = []

[tool.scikit-build.wheel]
packages = ["src/ax_asr"]
